--- a/src/template/transfer-operation.html
+++ b/src/template/transfer-operation.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="transfer-operation">
+    <button type="button"
+            ng-disabled="disabled.target"
+            ng-click="change({direction:'target'})">&lt;</button>
+    <button type="button"
+            ng-disabled="disabled.source"
+            ng-click="change({direction:'source'})">&gt;</button>
+</div>
